# ruban

./: .gitignore  Cargo.toml  README.md  foo.txt  output.json  tasks.json  test_tasks.json
src/: adapter_dataprovider.rs  adapter_user_interface.rs  core.rs  main.rs  port_dataprovider.rs  rendering.rs  taskmanager.rs  types.rs
tests/: cli.rs
