[package]
name = "ruban"
version = "0.1.0"
authors = ["Guillaume R <guillaume.rondon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
chrono = "0.4.13"
serde = "1.0.114"
serde_json = "1.0.56"
prettytable-rs = "^0.8"


[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"