[package]
name = "ruban"
version = "0.1.2"
authors = ["Guillaume R <guillaume.rondon@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "A CLI tool to input, start and finish your todos without leaving the terminal."
readme = "README.md"
homepage = "https://github.com/gmrdn/ruban"
repository = "https://github.com/gmrdn/ruban"
keywords = ["cli", "productivity", "kanban"]
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.3.13"
chrono = "0.4.13"
serde = { version = "1.0.114", features = ['derive'] }
serde_json = "1.0.56"
prettytable-rs = "^0.8"
textwrap = "0.12"
dirs = "3.0"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
